--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,7 +105,7 @@ p {
 /* HERO SECTION */
 #hero {
   background: url(../img/hero-bg.png) top center fixed;
-  background-size: contain;
+  background-size: cover;
   position: relative;
   z-index: 1;
 }
