--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,7 +104,7 @@ p {
 
 /* HERO SECTION */
 #hero {
-  background: url(../img/hero-bg.png) top center fixed;
+  background: url(../img/hero-bg.png) top center;
   background-size: cover;
   position: relative;
   z-index: 1;
