--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,7 +116,7 @@ p {
   top: 0;
   height: 100%;
   width: 100%;
-  background: black fixed;
+  background-color: black;
   opacity: 0.7;
   z-index: -1;
 }
