--- a/CSS/style.css
+++ b/CSS/style.css
@@ -138,6 +138,32 @@ p {
   z-index: 1;
   overflow-x: hidden;
 }
+#header .header .navbar__list ul a {
+  font-size: 2.5rem;
+  font-weight: 550;
+  letter-spacing: 0.2rem;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  padding: 20px;
+  display: block;
+}
+#header .header .navbar__list ul a::after {
+  content: attr(data-after);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  color: rgba(240, 248, 255, 0.021);
+  font-size: 9rem;
+  letter-spacing: 50px;
+  z-index: -1;
+  transition: 0.3s ease letter-spacing;
+}
+#header .header .navbar__list ul li:hover a::after {
+  transform: translate(-50%, -50%) scale(1);
+  letter-spacing: initial;
+}
 
 /* END OF HEADER SECTION */
 /* HERO SECTION */
