--- a/CSS/style.css
+++ b/CSS/style.css
@@ -160,9 +160,21 @@ p {
   z-index: -1;
   transition: 0.3s ease letter-spacing;
 }
+#header .header .navbar__list ul li:hover a {
+  color: crimson;
+}
 #header .header .navbar__list ul li:hover a::after {
   transform: translate(-50%, -50%) scale(1);
   letter-spacing: initial;
+}
+#header .header .navbar__list .hamburger {
+  z-index: 100;
+  height: 60px;
+  width: 60px;
+  display: inline-block;
+  border: 3px solid white;
+  border-radius: 50%;
+  position: relative;
 }
 
 /* END OF HEADER SECTION */
