--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
 /* KEYFRAMES */
+@keyframes hamburger_pulse {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+}
 @keyframes text_reveal_box {
   50% {
     width: 100%;
@@ -113,6 +123,7 @@ p {
 #header .header {
   min-height: 8vh;
   background-color: rgba(31, 30, 30, 0.24);
+  transition: 0.3s ease background-color;
 }
 #header .header .navbar {
   display: flex;
@@ -120,7 +131,7 @@ p {
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  min-width: 1300px;
+  max-width: 1300px;
   padding: 0 10px;
 }
 #header .header .navbar__list ul {
@@ -129,7 +140,7 @@ p {
   background-color: #1f1e1e;
   width: 100vw;
   height: 100vh;
-  left: 0;
+  left: 100%;
   top: 0;
   display: flex;
   flex-direction: column;
@@ -137,6 +148,10 @@ p {
   align-items: center;
   z-index: 1;
   overflow-x: hidden;
+  transition: 0.3s ease left;
+}
+#header .header .navbar__list ul.active {
+  left: 0;
 }
 #header .header .navbar__list ul a {
   font-size: 2.5rem;
@@ -175,6 +190,50 @@ p {
   border: 3px solid white;
   border-radius: 50%;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  transform: scale(0.8);
+  cursor: pointer;
+}
+#header .header .navbar__list .hamburger::after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  border: 3px solid white;
+  animation: hamburger_pulse 1s ease infinite;
+}
+#header .header .navbar__list .hamburger .bar {
+  height: 2px;
+  width: 30px;
+  position: relative;
+  background-color: white;
+  z-index: -1;
+}
+#header .header .navbar__list .hamburger .bar::after, #header .header .navbar__list .hamburger .bar::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  background-color: white;
+  transition: 0.3s ease;
+  transition-property: top, bottom;
+}
+#header .header .navbar__list .hamburger .bar::after {
+  top: 8px;
+}
+#header .header .navbar__list .hamburger .bar::before {
+  bottom: 8px;
+}
+#header .header .navbar__list .hamburger.active .bar::after {
+  top: 0;
+}
+#header .header .navbar__list .hamburger.active .bar::before {
+  bottom: 0;
 }
 
 /* END OF HEADER SECTION */
@@ -600,6 +659,31 @@ p {
 /* END OF MEDIA QUERY FOR TABLET */
 /* MEDIA QUERY FOR DESKTOP */
 @media only screen and (min-width: 1200px) {
+  /* HEADER */
+  #header .header {
+    background-color: transparent;
+  }
+  #header .header .navbar__list .hamburger {
+    display: none;
+  }
+  #header .header .navbar__list ul {
+    position: initial;
+    display: block;
+    height: auto;
+    width: fit-content;
+    background-color: transparent;
+  }
+  #header .header .navbar__list ul li {
+    display: inline-block;
+  }
+  #header .header .navbar__list ul a {
+    font-size: 1.8rem;
+  }
+  #header .header .navbar__list ul a::after {
+    display: none;
+  }
+
+  /* END OF HEADER */
   /* SERVICES */
   #service .service__header {
     width: 700px;
