--- a/SASS/_assets.scss
+++ b/SASS/_assets.scss
@@ -1,5 +1,16 @@
 /* KEYFRAMES */ 
 
+@keyframes hamburger_pulse{
+    0%{
+        opacity: 1;
+        transform: scale(1);
+    }
+    100%{
+        opacity: 0;
+        transform: scale(1.5);
+    }
+}
+
 @keyframes text_reveal_box{
     50%{
         width: 100%;
