--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -70,13 +70,14 @@ p {
     .header {
         min-height: 8vh;
         background-color: rgba(31, 30, 30, 0.24);
+        transition: 0.3s ease background-color;
         .navbar {
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            min-width: 1300px;
+            max-width: 1300px;
             padding: 0 10px;
             &__list {
                 ul {
@@ -85,7 +86,7 @@ p {
                     background-color: rgb(31, 30, 30);
                     width: 100vw;
                     height: 100vh;
-                    left: 0;
+                    left: 100%;
                     top: 0;
                     display: flex;
                     flex-direction: column;
@@ -93,6 +94,10 @@ p {
                     align-items: center;
                     z-index: 1;
                     overflow-x: hidden;
+                    transition: .3s ease left;
+                    &.active{
+                        left: 0;
+                    }
                     a {
                         font-size: 2.5rem;
                         font-weight: 550;
@@ -134,6 +139,54 @@ p {
                     border: 3px solid white;
                     border-radius: 50%;
                     position: relative;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 10px;
+                    transform: scale(0.8);
+                    cursor: pointer;
+                    &::after{
+                        position: absolute;
+                        content: '';
+                        height: 100%;
+                        width: 100%;
+                        border-radius: 50%;
+                        border: 3px solid white;
+                        animation: hamburger_pulse 1s ease infinite;
+                    }
+                    .bar {
+                        height: 2px;
+                        width: 30px;
+                        position: relative;
+                        background-color: white;
+                        z-index: -1;
+                        &::after, &::before {
+                            content: '';
+                            position: absolute;
+                            height: 100%;
+                            width: 100%;
+                            left: 0;
+                            background-color: white;
+                            transition: .3s ease;
+                            transition-property: top, bottom;
+                        }
+                        &::after{
+                            top: 8px;
+                        }
+                        &::before{
+                            bottom: 8px;
+                        }
+                    }
+                    &.active{
+                        .bar{
+                            &::after{
+                                top: 0;
+                            }
+                            &::before{
+                                bottom: 0;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -616,6 +669,37 @@ p {
 /* MEDIA QUERY FOR DESKTOP */
 
 @media only screen and (min-width: 1200px) {
+    /* HEADER */
+    #header{
+        .header{
+            background-color: transparent;
+            .navbar{
+                &__list{
+                    .hamburger{
+                        display: none;
+                    }
+                    ul{
+                        position: initial;
+                        display: block;
+                        height: auto;
+                        width: fit-content;
+                        background-color: transparent;
+                        li{
+                            display: inline-block;
+                        }
+                        a{
+                            font-size: 1.8rem;
+                            &::after{
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    /* END OF HEADER */
+
     /* SERVICES */
     #service {
         .service {
