--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -11,6 +11,7 @@
 html {
     font-size: 10px;
     font-family: "Montserrat", sans-serif;
+    scroll-behavior: smooth;
 }
 a {
     text-decoration: none;
@@ -270,6 +271,8 @@ p {
         padding: 100px 0;
         &__header {
             text-align: center;
+            max-width: 500px;
+            margin: 0 auto;
         }
         &__cards {
             display: flex;
@@ -638,12 +641,11 @@ p {
                 width: 100%;
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
-                margin: 0;
-                padding: 20px;
+                justify-content: space-evenly;
+                margin: 40px 0;
                 .contact__item {
-                    margin: 10px;
-                    padding: 20px 10px;
+                    width: 30%;
+                    margin: 0;
                     flex-direction: row;
                     &__icon {
                         height: 100px;
