--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -70,7 +70,7 @@ p {
     height: auto;
     .header {
         min-height: 8vh;
-        background-color: rgba(31, 30, 30, 0.24);
+        background-color: transparent;
         transition: 0.3s ease background-color;
         .navbar {
             display: flex;
