--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -26,7 +26,8 @@ a {
 img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 p {
     color: black;
@@ -153,7 +154,8 @@ p {
                         width: 100%;
                         border-radius: 50%;
                         border: 3px solid white;
-                        animation: hamburger_pulse 1s ease infinite;
+                        -webkit-animation: hamburger_pulse 1s ease infinite;
+                                animation: hamburger_pulse 1s ease infinite;
                     }
                     .bar {
                         height: 2px;
@@ -215,29 +217,40 @@ p {
         z-index: -1;
     }
     h1 {
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
         width: fit-content;
         font-size: 4rem;
         position: relative;
         color: transparent;
-        animation: text_reveal 0.5s ease forwards;
-        animation-delay: 1.5s;
+        -webkit-animation: text_reveal 0.5s ease forwards;
+                animation: text_reveal 0.5s ease forwards;
+        -webkit-animation-delay: 1.5s;
+                animation-delay: 1.5s;
         &:nth-child(1) {
-            animation-delay: 1s;
+            -webkit-animation-delay: 1s;
+                    animation-delay: 1s;
             span {
-                animation-delay: 0.5s;
+                -webkit-animation-delay: 0.5s;
+                        animation-delay: 0.5s;
             }
         }
         &:nth-child(2) {
-            animation-delay: 2s;
+            -webkit-animation-delay: 2s;
+                    animation-delay: 2s;
             span {
-                animation-delay: 1.5s;
+                -webkit-animation-delay: 1.5s;
+                        animation-delay: 1.5s;
             }
         }
         &:nth-child(3) {
-            animation: text_reveal_crimson 0.5s ease forwards;
-            animation-delay: 3s;
+            -webkit-animation: text_reveal_crimson 0.5s ease forwards;
+                    animation: text_reveal_crimson 0.5s ease forwards;
+            -webkit-animation-delay: 3s;
+                    animation-delay: 3s;
             span {
-                animation-delay: 2.5s;
+                -webkit-animation-delay: 2.5s;
+                        animation-delay: 2.5s;
             }
         }
         span {
@@ -247,8 +260,10 @@ p {
             height: 100%;
             width: 0;
             background-color: crimson;
-            animation: text_reveal_box 1s ease;
-            animation-delay: 1s;
+            -webkit-animation: text_reveal_box 1s ease;
+                    animation: text_reveal_box 1s ease;
+            -webkit-animation-delay: 1s;
+                    animation-delay: 1s;
         }
     }
     .hero {
@@ -536,10 +551,12 @@ p {
                 width: 50px;
                 margin: 0 5px;
                 img {
-                    filter: grayscale(1);
+                    -webkit-filter: grayscale(1);
+                            filter: grayscale(1);
                     transition: 0.3s ease filter;
                     &:hover {
-                        filter: grayscale(0);
+                        -webkit-filter: grayscale(0);
+                                filter: grayscale(0);
                     }
                 }
             }
@@ -651,7 +668,8 @@ p {
                         height: 100px;
                         width: 100px;
                         img {
-                            object-fit: contain;
+                            -o-object-fit: contain;
+                               object-fit: contain;
                         }
                     }
                     &__text {
@@ -684,6 +702,8 @@ p {
                         position: initial;
                         display: block;
                         height: auto;
+                        width: -webkit-fit-content;
+                        width: -moz-fit-content;
                         width: fit-content;
                         background-color: transparent;
                         li{
