--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -46,7 +46,7 @@ p {
     letter-spacing: 0.2rem;
     text-align: center;
     span {
-        color: crimson;
+        color: rgb(140, 140, 255);
     }
 }
 .brand {
