--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -55,7 +55,7 @@ p {
         text-transform: uppercase;
         color: white;
         span {
-            color: rgb(117, 117, 252);
+            color: crimson;
         }
     }
 }
