--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -370,6 +370,7 @@ p {
             margin: 20px auto;
             overflow: hidden;
             border-radius: 10px;
+            max-height: 600px;
             &__info {
                 padding: 30px;
                 flex-basis: 50%;
@@ -395,7 +396,8 @@ p {
             }
             &__image {
                 flex-basis: 50%;
-                height: 300px;
+                height: 50%;
+                width: 100%;
                 overflow: hidden;
                 position: relative;
                 &::after {
