--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -367,6 +367,7 @@ p {
             align-items: center;
             justify-content: center;
             width: 80%;
+            height: 700px;
             margin: 20px auto;
             overflow: hidden;
             border-radius: 10px;
@@ -395,9 +396,10 @@ p {
             }
             &__image {
                 flex-basis: 50%;
+                width: 100%;
                 overflow: hidden;
                 position: relative;
-                max-height: 300px;
+                height: 300px;
                 &::after {
                     content: "";
                     position: absolute;
