--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -613,6 +613,7 @@ p {
                 &__info,
                 &__image {
                     height: 100%;
+                    width: 50%;
                 }
                 &:nth-child(even) {
                     flex-direction: row-reverse;
